@@ -82,6 +82,7 @@
         www/vicidial/AST_inbound_forecasting.php,
         www/vicidial/AST_rt_monitor_log_report.php,
         www/vicidial/Erlang_report.php: Fix for rare allowed reports issue.
+  * www/agc/functions.php: Add missing global debug vars ($DB, $mel).
 
 2.25.27
   [Jörg Fring-Fürst]
